auto-test/tests/chapter_18/invalid_types/invalid_struct_declaration/incomplete_member.c
struct s; 

struct a {
  
  struct s g;
};